# fortress-and-territories-v2

./: .gitignore  AI_CONTROLLER_MIGRATION_PLAN.md  LICENSE  README.md  pyproject.toml
src/: __init__.py  main.py
src/ai/: __init__.py  ai_controller.py  target_checker.py  target_selector.py
src/building/: __init__.py  build_validator.py
src/controllers/: camera_controller.py  game_controller.py  input_handler.py  menu_controller.py
src/core/: main_config.py
src/core/configs/: __init__.py  colors.py  display.py  terrain.py
src/core/entities/: __init__.py  faction.py  world.py
src/core/entities/clients/: __init__.py  abstract_client.py  ai.py  player.py
src/core/entities/coord_based/: __init__.py  abstract_cord_entity.py  base.py  bridge.py  building.py  empty.py  fog.py  forest.py  fortress.py  portal.py  terrain.py  tower.py  (+2 more)
src/core/states/: __init__.py  gamemode.py  gameplay.py  session.py  world.py
src/core/types/: __init__.py  build_result.py  candidate.py  coord.py  menu_selection.py  player_action.py  tile_context.py
src/generation/: __init__.py  faction_initializer.py  structure_placer.py  terrain_generator.py  world_generator.py
src/render/: __init__.py  faction_renderer.py  game_renderer.py  menu_renderer.py  terrain_renderer.py  ui_panel_renderer.py
src/services/: event_log.py  move_executor.py  turn_manager.py  visibility_service.py
src/utils/: __init__.py  generation_helper.py
src/utils/ai/: ai_helper.py
src/utils/generation/: generation_helper.py
src/utils/renderer/: renderer_helper.py
tests/: integration.py  test_ai_controller.py  test_build_validator.py  test_generation.py
(+8 files in other folders)
