[project]
name = "fortress-and-territories-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "therueryan",email = "georgytoper@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "windows-curses (>=2.4.1,<3.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]
